Artsファイルの変更、headerファイルの追加等

--- a/Arts/Arts_Watch.html
+++ b/Arts/Arts_Watch.html
@@ -5,18 +5,28 @@
         <meta name="viewport" content="width=device-witdh, initial-scale=1" >
         <meta name="description" content="aaaaaaaaaa">
         <title>aaaaaaaaaaaaaaaaa</title>
-        
-        <link rel="stylesheet" href=".css">
+        <link rel="stylesheet" href="Arts_Watch.css">
+        <link rel="stylesheet" href="../base.css">
     </head>
     <body>
-        <div>
+    <div class="Arts">
+        <div class="Arts__heading">
             <p>作品を見る↓</p>
         </div>
-        <div>
-            <img src="">
+        <div class="Arts__contents">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
+            <img src="a beautiful mountain landscape.png">
         </div>
-        <div>
+        <div class="Arts__more">
             <p>もっと見る</p>
         </div>
+    </div>
     </body>
 </html>
