--- a/header/header.html
+++ b/header/header.html
@@ -10,6 +10,17 @@
     </head>
     <body>
     <div class="header">
+        <div class="header-nav">
+            <ul>
+                <li>home</li>
+                <li>information</li>
+                <li>?</li>
+                <li>about us</li>
+                <li>Arts</li>
+                <li>?</li>
+                <li>aaa</li>
+            </ul>
+        </div>
     
 
     </div>
