htmlファイルをindex.htmlに統合

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
         <meta name="viewport" content="width=device-witdh, initial-scale=1" >
         <meta name="description" content="aaaaaaaaaa">
         <title>aaaaaaaaaaaaaaaaa</title>
-        <link rel="stylesheet" href="Arts_Watch.css">
-        <link rel="stylesheet" href="../base.css">
+        <link rel="stylesheet" href="Arts.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="base.css">
     </head>
     <body>
+    <div class="header">
+        <div class="header-nav">
+            <ul>
+                <li>home</li>
+                <li>information</li>
+                <li>?</li>
+                <li>about us</li>
+                <li>Arts</li>
+                <li>?</li>
+                <li>?</li>
+            </ul>
+        </div>
+    </div>
     <div class="Arts">
         <div class="Arts__heading">
             <p>作品を見る↓</p>
