--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
         <meta name="viewport" content="width=device-witdh, initial-scale=1" >
         <meta name="description" content="aaaaaaaaaa">
         <title>aaaaaaaaaaaaaaaaa</title>
-        <link rel="stylesheet" href="Arts.css">
-        <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="base.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="Arts.css">
+        
     </head>
     <body>
     <div class="header">
         <div class="header-nav">
             <ul>
-                <li>home</li>
-                <li>information</li>
-                <li>?</li>
-                <li>about us</li>
-                <li>Arts</li>
-                <li>?</li>
-                <li>?</li>
+                <li class="header-logo"><img src="gakugeki_logo.svg"></li>
+                <li><a>home</a></li>
+                <li><a>information</a></li>
+                <li><a>?</a></li>
+                <li><a>about us</a></li>
+                <li><a>Arts</a></li>
+                <li><a>?</a></li>
+                <li><a>?</a></li>
             </ul>
         </div>
+
+    </div>
     </div>
     <div class="Arts">
         <div class="Arts__heading">
