--- a/html/index.html
+++ b/html/index.html
@@ -3,25 +3,24 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-witdh, initial-scale=1" >
-        <meta name="description" content="aaaaaaaaaa">
-        <title>aaaaaaaaaaaaaaaaa</title>
-        <link rel="stylesheet" href="Base.css">
-        <link rel="stylesheet" href="Header.css">
-        <link rel="stylesheet" href="Arts.css">
-        <link rel="stylesheet" href="Project.css">
+        <meta name="description" content="学檄INFINITEの公式サイト">
+        <title>学檄INFINITE</title>
+        <link rel="stylesheet" href="../css/Base.css">
+        <link rel="stylesheet" href="../css/Header.css">
+        <link rel="stylesheet" href="../css/Arts.css">
+        <link rel="stylesheet" href="../css/Project.css">
         
     </head>
     <body>
     <div class="header">
         <div class="header-nav">
             <ul>
-                <li class="header-nav-logo"><img src="gakugeki_logo.svg"></li>
+                <li class="header-nav-logo"><a href="index.html"><img src="../img/gakugeki_logo.svg"></a></li>
                 <div class="header-nav__menu">
-                <li><a href="#">home</a></li>
                 <li><a href="#">information</a></li>
                 <li><a href="#">aaaa</a></li>
                 <li><a href="#">about us</a></li>
-                <li><a href="#">Arts</a></li>
+                <li><a href="Arts.html">Arts</a></li>
                 <li><a href="#">aaaa</a></li>
                 <li><a href="#">aaaa</a></li>
                 </div>
@@ -30,13 +29,12 @@
         <div class="header__heading">
             <div class="header__heading__item">
             <h2 class="header__heading__text">
-               <p>世界最高峰SFワールド</p>
                <p>学生がゼロから作る</p>
                <p>「仮想空間ベンチャー都市」</p>
                <p>絶賛開発中!!!</p>
             </h2>
             </div>
-            <div class="header__heading__img">
+            <div class="header__heading__img"><a href="#"> </a>
             </div>
         </div>
     </div>
@@ -55,24 +53,28 @@
                 「AIアートワールド」をclusterにて公開中です!<br>
                 メタバース空間でアート鑑賞という新感覚をお楽しみいただけます。
             </p>
-            <p class="Arts__world">ワールドへ→</p>
+            <a href="#"><p class="Arts__world">ワールドへ</p></a>
         </div>
         <div class="Arts__contents">
-             <p>作品を見る↓</p>
+             <a href="#"><p>作品を見る</p></a>
          <div class="Arts__contents__item">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
-             <img src="a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
+             <img src="../img/a_beautiful_mountain_landscape.png">
          </div>
          <div class="Arts__more">
-            <p>もっと見る</p>
+            <a href="Arts.html"><p>もっと見る</p></a>
          </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer_gakugeki">
         </div>
     </div>
     </body>
