ファイルの整理

--- a/html/Arts.html
+++ b/html/Arts.html
@@ -18,17 +18,17 @@
                 <li class="header-nav-logo"><a href="index.html"><img src="../img/gakugeki_logo.svg"></a></li>
                 <div class="header-nav__menu">
                 <li><a href="#">information</a></li>
-                <li><a href="#">aaaa</a></li>
+                <li><a href="#">Project</a></li>
                 <li><a href="#">about us</a></li>
-                <li><a href="Arts.html">Arts</a></li>
-                <li><a href="#">aaaa</a></li>
-                <li><a href="#">aaaa</a></li>
+                <li><a href="Arts.html">Art</a></li>
+                <li><a href="#">Sponsorship</a></li>
+                <li><a href="#">Contact</a></li>
                 </div>
             </ul>
         </div>     
     </div>       
     <div class="Arts">
-        <h1 class="Arts__heading">AI Arts Gallery</h1>
+        <h1 class="Arts__heading">AI Art Gallery</h1>
         <div class="Arts__description">
             <p class="Arts__text">現在学檄ワールドのプロトタイプとして作成した<br>
                 「<strong>AIアートワールド</strong>」をclusterにて公開中です!<br>
@@ -37,7 +37,6 @@
             <a href="#"><p class="Arts__world">ワールドへ</p></a>
         </div>
         <div class="Arts__contents">
-             <a href="#"><p>作品を見る</p></a>
          <div class="Arts__contents__item">
              <img src="../img/a_beautiful_mountain_landscape.png">
              <img src="../img/a_beautiful_mountain_landscape.png">
