--- a/html/index.html
+++ b/html/index.html
@@ -5,24 +5,28 @@
         <meta name="viewport" content="width=device-witdh, initial-scale=1" >
         <meta name="description" content="学檄INFINITEの公式サイト">
         <title>学檄INFINITE</title>
+        <!-------------- URL ----------------->
         <link rel="stylesheet" href="../css/Base.css">
         <link rel="stylesheet" href="../css/Header.css">
         <link rel="stylesheet" href="../css/Arts.css">
         <link rel="stylesheet" href="../css/Project.css">
+        <link rel="stylesheet" href="../css/Menber.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
         
     </head>
     <body>
     <div class="header">
         <div class="header-nav">
             <ul>
+                <!-------------- URL ----------------->
                 <li class="header-nav-logo"><a href="index.html"><img src="../img/gakugeki_logo.svg"></a></li>
                 <div class="header-nav__menu">
                 <li><a href="#">information</a></li>
-                <li><a href="#">aaaa</a></li>
+                <li><a href="#">Project</a></li>
                 <li><a href="#">about us</a></li>
-                <li><a href="Arts.html">Arts</a></li>
-                <li><a href="#">aaaa</a></li>
-                <li><a href="#">aaaa</a></li>
+                <li><a href="Arts.html">Art</a></li>
+                <li><a href="#">Sponsorship</a></li>
+                <li><a href="#">Contact</a></li>
                 </div>
             </ul>
         </div>
@@ -47,7 +51,7 @@
         </div>
     </div>
     <div class="Arts">
-        <h1 class="Arts__heading">AI Arts Gallery</h1>
+        <h1 class="Arts__heading">AI Art Gallery</h1>
         <div class="Arts__description">
             <p class="Arts__text">現在学檄ワールドのプロトタイプとして作成した<br>
                 「AIアートワールド」をclusterにて公開中です!<br>
@@ -56,8 +60,8 @@
             <a href="#"><p class="Arts__world">ワールドへ</p></a>
         </div>
         <div class="Arts__contents">
-             <a href="#"><p>作品を見る</p></a>
          <div class="Arts__contents__item">
+            <!-------------- URL ----------------->
              <img src="../img/a_beautiful_mountain_landscape.png">
              <img src="../img/a_beautiful_mountain_landscape.png">
              <img src="../img/a_beautiful_mountain_landscape.png">
@@ -69,13 +73,28 @@
              <img src="../img/a_beautiful_mountain_landscape.png">
          </div>
          <div class="Arts__more">
+            <!-------------- URL ----------------->
             <a href="Arts.html"><p>もっと見る</p></a>
          </div>
         </div>
+    </div>
+    <div class="Member">
+        <ul class="Member__item">
+            <li>Taka</li>
+            <li>hori</li>
+            <li>yama</li>
+            <li>raiki</li>
+            <li>rei</li>
+            <li>kii</li>
+            <li>tera</li>
+        </ul>
     </div>
     <div class="footer">
         <div class="footer_gakugeki">
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="../js/slide.js"></script>
     </body>
 </html>
